# bayesian-regression-101

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  deny.toml  environment.yml  justfile
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs  sampler.rs
crates/regression/: Cargo.toml  pyproject.toml
crates/regression/src/: lib.rs
docs/: CONTRIBUTING.md
notebooks/: something.ipynb
